# py_learning

./: .gitignore  README.md  pyproject.toml
hw16/: brocard_scraper.py  main.py
hw18/: main.py  test.py
hw18/static/: styles.css
hw18/templates/: ai_html.html  base.html  index.html  qr_generator.html
hw20/: main.py
hw24/: task1.py  task2.py  task3.py
hw32/: main.py
hw34/: main.py  task1.py  test_app.py
hw36/: app.py  db.py  main.py  test_api_async.py  test_api_sync.py
hw38/: alembic.ini  db.py  main.py
hw38/migrations/: env.py
hw38/routers/: tasks.py
hw38/schemas/: v1.py  v2.py
hw38/services/: animals.py
hw40/: fill_db.py  main.py  test.py  test_api.py
hw40/migrations/: env.py
hw40/src/: auth.py  schemas.py  token_utils.py
hw40/tests/: conftest.py  test_categories.py  test_exchanges.py  test_reviews.py  test_root.py  test_skills.py  test_stats.py  test_users.py
hw42/: main.py
hw44/: app.py  auth.py  censor.py  manager.py
hw44/templates/: index.html
hw46/: task1.py  task2.py
hw54/: db.sqlite3
hw54/blog/: admin.py  models.py  urls.py  views.py
hw54/portfolio/: urls.py  views.py
hw54/techblog/: asgi.py  settings.py  urls.py  wsgi.py
hw54/templates/: base.html  index.html
hw56/: db.sqlite3
hw56/library_system/: settings.py
hw58/: db.sqlite3  manage.py
hw58/accounts/: admin.py  forms.py  models.py  urls.py  views.py
hw58/course_system/: asgi.py  settings.py  urls.py  wsgi.py
hw58/courses/: admin.py  forms.py  models.py
hw60/: db.sqlite3  portfolio_config.json
hw60/blog/: admin.py  (+2 more)
hw62/: db.sqlite3  manage.py
(+103 files in other folders)
