[project]
name = "hw15"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "curl-cffi>=0.14.0",
    "fastapi>=0.135.3",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "google-genai>=1.63.0",
    "httpx>=0.28.1",
    "parse>=1.21.0",
    "parsel>=1.11.0",
    "psycopg2>=2.9.11",
    "pydantic[email]>=2.12.5",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.1",
    "python-magic>=0.4.27",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.42.0",
]
